demo/Demo1.deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: demo-v1
  namespace: demo
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: demo
        version: v1
    spec:
      containers:
      - name: demo-springbootv1
        image: liujian82/springbootv1
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
