demo/Demo2.deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: demo-v2
  namespace: demo
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: demo
        version: v2
    spec:
      containers:
      - name: demo-springbootv2
        image: liujian82/springbootv2
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8080
