demo/virtual-services.yml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: virtual-service
  namespace: demo
spec:
  hosts:
    - "*"
  gateways:
  - service-gateway
  http:
  - match:
    - uri:
        prefix: "/address"
    route:
    - destination:
        host: demo-svc.demo.svc.cluster.local
        port:
          number: 8080
        subset: v1
      weight: 80
    - destination:
        host: demo-svc.demo.svc.cluster.local
        port:
          number: 8080
        subset: v2
      weight: 20
